[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scrapephantom"
version = "1.2.0"
description = "智能爬虫调度框架 - 自动选择最优爬虫工具，绕过反爬保护（内置全部依赖）"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "wdrma"}
]
keywords = ["scraper", "crawler", "anti-bot", "cloudflare", "scraping", "vendor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# 无外部依赖 - 全部内置在 vendor 目录
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/wdrma2010/ScrapePhantom"
Repository = "https://github.com/wdrma2010/ScrapePhantom"
Issues = "https://github.com/wdrma2010/ScrapePhantom/issues"

[tool.setuptools.packages.find]
include = ["smart_scraper*"]
